--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/fire": "^7.5.0",
     "@angular/forms": "^14.2.0",
     "@angular/material": "^14.2.4",
+    "@angular/material-moment-adapter": "^15.1.5",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "firebase": "^9.16.0",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
